/*
 * $Id: ChangeLog,v 1.5800 2007/12/04 14:56:41 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-05 01:52 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_gnu.sh
  * make_xmingw.sh
    ! Fixed architecture detection under new MSYS. Improved syntax
      message. (Borrowed from Harbour)
  * source/debug/dbgbrwsr.prg
  * source/debug/dbghelp.prg
  * source/debug/dbgtarr.prg
  * source/debug/dbgthsh.prg
  * source/debug/dbgtobj.prg
  * source/debug/dbgwa.prg
  * source/debug/debugger.prg
    ! Added an minimalistic TBrowse implementation that is just enough
      for internal use by the debugger. Fixes miscellaneous problems e.g.
      when debugging a piece of code with RELATIONs turned on.

2007-12-04 21.50 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
   * source/compiler/harbour.c
   * source/compiler/cmdcheck.c
     ! minor correction on my recent changes.

2007-12-04 13.15 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
   * source/compiler/harbour.c
   * source/compiler/cmdcheck.c
   * include/hbcomp.h
     ! enable generation of .ppo/.ppt files in other path.
       Syntax : harbour my.prg -poc:\temp\
                harbour my.prg -ptoc:\temp\
       NOTE:
       * Please observe path naming, it should be "c:\temp\" not just "c:\temp"
       * Do not mention ppo/ppt file name, just path

2007-12-03 22:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tbrowse.prg
    ! fixed bug reported by xHB bug reporter at number 20071128-001.
    ( RefreshallForceStable change the current record ). Moved ::nLastRow
    var from InitCache() and fixed ::nLastRow from dbSkip() method.
    Cleaned refreshall() method.

2007-12-02 19:09 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/vm/arrays.c
    ! Fixed how many items must be allocated for small arrays.
